--- a/index.html
+++ b/index.html
@@ -113,6 +113,51 @@
 			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
+			
+		<!-- AMLP -->
+		<tbody><tr>
+			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b>AMLP: Adaptive Masking Lesion Patches for Self-supervised Medical Image Segmentation</b><br>
+					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
+					<em>Submitted to MIA</em> <br>
+			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
+			</p></td></tr>
+
+		<!-- $C^2$M-DoT -->
+		<tbody><tr>
+			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b>$C^2$M-DoT: Cross-modal consistent multi-view medical report generation with domain transfer network</b><br>
+					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
+					<em>Submitted to MIA</em> <br>
+			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
+			</p></td></tr>
+
+		<!-- SW-Seg -->
+		<tbody><tr>
+			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
+					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang<strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
+					<em>Submitted to MIA</em> <br>
+			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
+			</p></td></tr>
+
+		<!-- tnse -->
+		<tbody><tr>
+			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
+				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
+					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang<strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
+					<em>Submitted to MIA</em> <br>
+			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
+			</p></td></tr>
+			
 		</tbody>
 	</table>
 
