--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
 					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang<strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
 					<em>Minor revision of TNSE</em> <br>
-			[<a href="https://github.com/xiangtaowong/xiangtaowong.github.io/edit/main/files/Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation.pdf">Paper</a>]&nbsp;
+			[<a href="https://github.com/xiangtaowong/xiangtaowong.github.io/edit/main/files/tnse_lsj.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 			
