--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 
-		<!-- $C^2$M-DoT -->
+		<!-- C<sup>2</sup>M-DoT -->
 		<tbody><tr>
 			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
-				<b>$C^2$M-DoT: Cross-modal consistent multi-view medical report generation with domain transfer network</b><br>
+				<b>C<sup>2</sup>M-DoT: Cross-modal consistent multi-view medical report generation with domain transfer network</b><br>
 					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
 					<em>Submitted to MIA</em> <br>
 			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
@@ -141,7 +141,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
-					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang<strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
+					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
 					<em>Under review of TCVST</em> <br>
 			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
@@ -152,7 +152,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
-					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang<strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
+					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
 					<em>Minor revision of TNSE</em> <br>
 			[<a href="https://github.com/xiangtaowong/xiangtaowong.github.io/edit/main/files/tnse_lsj.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
