--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<!-- Prior to my ostgraduate, I received my Bachelor's degree from the Electrical Engineering, North China University of Science and Technology, where I worked with Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>. -->
 					<!-- I spent an unforgettable summer in 2020 doing internship at Stanford University, advised by Prof. <a href="https://geometry.stanford.edu/member/guibas/index.html">Leonidas J. Guibas</a>. -->
 					<!-- <br><br> -->
-					My research interests are in computer vision, particularly self-supervised learning, AIGC, and their interpretability analysis.
+					My research interests are in computer vision (CV) and natural language processing (NLP), particularly self-supervised learning, and AIGC.
 					<!-- I also work on event-based vision. -->
 					<!-- I am broadly interested in designing machine learning systems that can perceive the world as we human do, which I believe is the cornerstone of achieving AGI. -->
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
