--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<tbody>
 			<tr>
 				<td width="400">
-					<p align="center"><font face="Arial"><img border="0" src="imgs/me.jpg" height="224"></font></p>
+					<p align="center"><font face="Arial"><img border="0" src="imgs/wxt.jpg" height="224"></font></p>
 				</td>
 				<td>
 					<font face="Arial" size="5"><b>&nbsp;Xiangtao Wang<span lang="zh-cn">(王向涛)</span></b></font>
@@ -108,51 +108,51 @@
 				<b>MvCo-DoT: Multi-View Contrastive Domain Transfer Network for Medical Report Generation</b><br>
 					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Zhenghua Xu, Wenting Xu, Junyang Chen, Thomas Lukasiewicz<br>
 					<em>ICASSP, 2023</em> <br>
-			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			[<a href="https://ieeexplore.ieee.org/document/10095254">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 			
 		<!-- AMLP -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/AMLP.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>AMLP: Adaptive Masking Lesion Patches for Self-supervised Medical Image Segmentation</b><br>
 					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
 					<em>Submitted to MIA</em> <br>
-			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			[<a href="https://arxiv.org/abs/2309.04312">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 
 		<!-- C<sup>2</sup>M-DoT -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/C2M-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>C<sup>2</sup>M-DoT: Cross-modal consistent multi-view medical report generation with domain transfer network</b><br>
 					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
 					<em>Submitted to MIA</em> <br>
-			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			[<a href="files/C2M_DOT_MEDIMA.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 
 		<!-- SW-Seg -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/SW-Seg.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
 					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
 					<em>Under review of TCVST</em> <br>
-			[<a href="https://slotformer.github.io/">Paper</a>]&nbsp;
+			<!-- [<a href="https://slotformer.github.io/">Paper</a>]&nbsp; -->
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 
-		<!-- tnse -->
+		<!-- CoAG-MuSFu -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/CoAG-MuSFu.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
 					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
 					<em>Minor revision of TNSE</em> <br>
-			<a href="files/Collaborative_Attention_Guided_Multi-Scale_Feature_Fusion_Network_for_Medical_Image_Segmentation_tnse.pdf">Paper</a>&nbsp;
+			<a href="files/CoAG-MuSFu.pdf">Paper</a>&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 			
