--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			
 		<!-- AMLP -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/AMLP.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/AMLP.png" width="280" alt="AMLP" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>AMLP: Adaptive Masking Lesion Patches for Self-supervised Medical Image Segmentation</b><br>
 					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
@@ -126,7 +126,7 @@
 
 		<!-- C<sup>2</sup>M-DoT -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/C2M-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/C2M-DoT.png" width="280" alt="C2M-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>C<sup>2</sup>M-DoT: Cross-modal consistent multi-view medical report generation with domain transfer network</b><br>
 					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
@@ -137,7 +137,7 @@
 
 		<!-- SW-Seg -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/SW-Seg.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/SW-Seg.png" width="280" alt="SW-Seg" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
 					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
@@ -148,7 +148,7 @@
 
 		<!-- CoAG-MuSFu -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/CoAG-MuSFu.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/CoAG-MuSFu.png" width="280" alt="CoAG-MuSFu" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
 					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
