--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
 					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
-					<em>Under review of TCVST</em> <br>
+					<em>Under review of TCSVT</em> <br>
 			<!-- [<a href="https://slotformer.github.io/">Paper</a>]&nbsp; -->
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
