--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 		<!-- SW-Seg -->
 		<tbody><tr>
-			<td width="30%" valign="middle"><p><img src="./imgs/SW-Seg.png" width="280" alt="SW-Seg" style="border-style: none" align="top"></p></td>
+			<td width="30%" valign="middle"><p><img src="./imgs/SW_Seg.png" width="280" alt="SW-Seg" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
 					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
