--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
 					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
 					<em>Under review of TCSVT</em> <br>
-			<!-- [<a href="https://slotformer.github.io/">Paper</a>]&nbsp; -->
+			[<a href="files/SW_Seg.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 
