--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<tr>
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 12pt;">
-					I am a second-year postgraduate student in Intelligent Medical Laboratory at the Hebei University of Technology, supervised by Prof. <a href="https://tisl.cs.utoronto.ca/author/igor-gilitschenski/">Zhenghua Xu</a>.
+					I am a third-year postgraduate student in Intelligent Healthcare and Big Data Team at the Hebei University of Technology, supervised by Prof. <a href="https://tisl.cs.utoronto.ca/author/igor-gilitschenski/">Zhenghua Xu</a>.
 					<!-- I have the fortunate to work with Prof. <a href="https://animesh.garg.tech/">Animesh Garg</a>, Prof. <a href="https://taiya.github.io/">Andrea Tagliasacchi</a> and Dr. <a href="https://tkipf.github.io/">Thomas Kipf</a>.
 					I am affiliated with the <a href="https://vectorinstitute.ai/">Vector Institute</a>. -->
 					<br><br>
@@ -81,7 +81,8 @@
 		<font face="Arial" style="font-size: 12pt; line-height: 2;">
 		<ul>
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> <strong>Seminar</strong>: I co-organize the <a href="https://robotics.cs.toronto.edu/toronto-air/">Toronto AI in Robotics (AIR) Seminar</a>. Check it out if you are interested!</li> -->
-			<li><b style="color: green; background-color: #ffff42">NEW</b> [Sep, 2023] Two papers are submitted to <b>MIA</b>!</li>
+			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sep, 2023] Two papers are submitted to <b>MIA</b>!</li> -->
+			<li>[Sep, 2023] Two papers are submitted to <b>MIA</b>!</li>
 			<li>[Feb, 2023] Two papers accepted by <b>ICASSP 2023</b>!</li>
 		</ul>
 		</font>
@@ -153,7 +154,7 @@
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
 					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
 					<em>Minor revision of TNSE</em> <br>
-			<a href="files/CoAG-MuSFu.pdf">Paper</a>&nbsp;
+			[<a href="files/CoAG-MuSFu.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 			
@@ -164,8 +165,8 @@
 		Selected Awards</font></b></p>
 		<font face="Arial" style="font-size: 12pt; line-height: 2;">
 			<ul>
-				<li>1st place in Graduate Academic Scholarship of the major (top 10\%), 2022.</li>
-				<li>Merit Student (top 10\%), 2022.</li>
+				<li>1st place in Graduate Academic Scholarship of the major (top 10%), 2022.</li>
+				<li>Merit Student (top 10%), 2022.</li>
 				<li>Bronze Prize of the 7th National Undergraduate Biomedical Engineering Innovation Design Competition, 2022.</li>
 				<li>Silver Prize of the 12th National Undergraduate Mathematics Contest (non-mathematics), 2020.</strong></li>
 				<li>Bronze Prize of the 8th APMCM Asia-Pacific University Mathematical Contest in Modeling, 2018.</li>
