--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<tbody>
 			<tr>
 				<td width="400">
-					<p align="center"><font face="Arial"><img border="0" src="imgs/wxt.jpg" height="224"></font></p>
+					<p align="center"><font face="Arial"><img border="0" src="imgs/wxt.png" height="224"></font></p>
 				</td>
 				<td>
 					<font face="Arial" size="5"><b>&nbsp;Xiangtao Wang<span lang="zh-cn">(王向涛)</span></b></font>
