--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 			<tr>
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;"><font face="Arial" style="font-size: 12pt;">
-					I am a third-year postgraduate student in Intelligent Healthcare and Big Data Team at the Hebei University of Technology, supervised by Prof. <a href="https://tisl.cs.utoronto.ca/author/igor-gilitschenski/">Zhenghua Xu</a>.
+					I am a third-year postgraduate student in Intelligent Healthcare and Big Data Team at the Hebei University of Technology, supervised by Prof. <a href="https://zhenghuaxu.info/">Zhenghua Xu</a>.
 					<!-- I have the fortunate to work with Prof. <a href="https://animesh.garg.tech/">Animesh Garg</a>, Prof. <a href="https://taiya.github.io/">Andrea Tagliasacchi</a> and Dr. <a href="https://tkipf.github.io/">Thomas Kipf</a>.
 					I am affiliated with the <a href="https://vectorinstitute.ai/">Vector Institute</a>. -->
 					<br><br>
 					<!-- Prior to my ostgraduate, I received my Bachelor's degree from the Electrical Engineering, North China University of Science and Technology, where I worked with Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>. -->
 					<!-- I spent an unforgettable summer in 2020 doing internship at Stanford University, advised by Prof. <a href="https://geometry.stanford.edu/member/guibas/index.html">Leonidas J. Guibas</a>. -->
 					<!-- <br><br> -->
-					My research interests are in computer vision (CV) and natural language processing (NLP), particularly self-supervised learning, and AIGC.
+					My research interests are in computer vision (CV) and natural language processing (NLP), particularly self-supervised learning, LLM, Robotics, and AIGC.
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
 				</td>
 			</tr>
@@ -98,7 +98,7 @@
 				<b>MPS-AMS: Masked Patches Selection and Adaptive Masking Strategy Based Self-Supervised Medical Image Segmentation</b><br>
 					<strong>xiangtao Wang</strong>, Ruizhi Wang, Biao Tian, Jiaojiao Zhang, Shuo Zhang, Junyang Chen, Thomas Lukasiewicz, Zhenghua Xu<br>
 				<em>ICASSP, 2023</em> <br>
-			[<a href="https://arxiv.org/abs/2302.13699">Paper</a>]&nbsp;
+			[<a href="https://ieeexplore.ieee.org/document/10094657">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
 		</tbody>
