--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> <strong>Seminar</strong>: I co-organize the <a href="https://robotics.cs.toronto.edu/toronto-air/">Toronto AI in Robotics (AIR) Seminar</a>. Check it out if you are interested!</li> -->
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sep, 2023] Two papers are submitted to <b>MIA</b>!</li> -->
 			<li>[Sep, 2023] Two papers are submitted to <b>MIA</b>!</li>
+			<li>[Sep, 2023] One paper is Minor revision to <b>TNSE</b>!</li>
 			<li>[Feb, 2023] Two papers accepted by <b>ICASSP 2023</b>!</li>
 		</ul>
 		</font>
@@ -96,7 +97,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/MPS-AMS.png" width="280" alt="MPS-AMS" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>MPS-AMS: Masked Patches Selection and Adaptive Masking Strategy Based Self-Supervised Medical Image Segmentation</b><br>
-					<strong>xiangtao Wang</strong>, Ruizhi Wang, Biao Tian, Jiaojiao Zhang, Shuo Zhang, Junyang Chen, Thomas Lukasiewicz, Zhenghua Xu<br>
+					<strong>xiangtao Wang</strong>, Ruizhi Wang, Biao Tian, Jiaojiao Zhang, Shuo Zhang, Junyang Chen, Thomas Lukasiewicz, and Zhenghua Xu.<br>
 				<em>ICASSP, 2023</em> <br>
 			[<a href="https://ieeexplore.ieee.org/document/10094657">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
@@ -108,7 +109,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>MvCo-DoT: Multi-View Contrastive Domain Transfer Network for Medical Report Generation</b><br>
-					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Zhenghua Xu, Wenting Xu, Junyang Chen, Thomas Lukasiewicz<br>
+					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Zhenghua Xu, Wenting Xu, Junyang Chen, and Thomas Lukasiewicz.<br>
 					<em>ICASSP, 2023</em> <br>
 			[<a href="https://ieeexplore.ieee.org/document/10095254">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
@@ -119,7 +120,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/AMLP.png" width="280" alt="AMLP" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>AMLP: Adaptive Masking Lesion Patches for Self-supervised Medical Image Segmentation</b><br>
-					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
+					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Jie Zhou, Thomas Lukasiewicz, and Zhenghua Xu.<br>
 					<em>Submitted to MIA</em> <br>
 			[<a href="https://arxiv.org/abs/2309.04312">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
@@ -130,7 +131,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/C2M-DoT.png" width="280" alt="C2M-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>C<sup>2</sup>M-DoT: Cross-modal consistent multi-view medical report generation with domain transfer network</b><br>
-					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, Zhenghua Xu<br>
+					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, and Zhenghua Xu.<br>
 					<em>Submitted to MIA</em> <br>
 			[<a href="files/C2M_DOT_MEDIMA.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
@@ -141,7 +142,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/SW_Seg.png" width="280" alt="SW-Seg" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
-					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz<br>
+					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz.<br>
 					<em>Under review of TCSVT</em> <br>
 			[<a href="files/SW_Seg.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
@@ -152,7 +153,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/CoAG-MuSFu.png" width="280" alt="CoAG-MuSFu" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
-					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung<br>
+					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, and Victor C. M. Leung.<br>
 					<em>Minor revision of TNSE</em> <br>
 			[<a href="files/CoAG-MuSFu.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
