--- a/index.html
+++ b/index.html
@@ -109,11 +109,12 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>MvCo-DoT: Multi-View Contrastive Domain Transfer Network for Medical Report Generation</b><br>
-					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Zhenghua Xu, Wenting Xu, Junyang Chen, and Thomas Lukasiewicz.<br>
+					<strong>Ruizhi Wang<strong>, Xiangtao Wang, Zhenghua Xu*, Wenting Xu, Junyang Chen, and Thomas Lukasiewicz.<br>
 					<em>ICASSP, 2023</em> <br>
 			[<a href="https://ieeexplore.ieee.org/document/10095254">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
+		</tbody>
 			
 		<!-- AMLP -->
 		<tbody><tr>
@@ -125,6 +126,7 @@
 			[<a href="https://arxiv.org/abs/2309.04312">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
+		</tbody>
 
 		<!-- C<sup>2</sup>M-DoT -->
 		<tbody><tr>
@@ -136,6 +138,7 @@
 			[<a href="files/C2M_DOT_MEDIMA.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
+		</tbody>
 
 		<!-- SW-Seg -->
 		<tbody><tr>
@@ -147,6 +150,7 @@
 			[<a href="files/SW_Seg.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
+		</tbody>
 
 		<!-- CoAG-MuSFu -->
 		<tbody><tr>
@@ -158,7 +162,6 @@
 			[<a href="files/CoAG-MuSFu.pdf">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
 			</p></td></tr>
-			
 		</tbody>
 	</table>
 
