--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/MPS-AMS.png" width="280" alt="MPS-AMS" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>MPS-AMS: Masked Patches Selection and Adaptive Masking Strategy Based Self-Supervised Medical Image Segmentation</b><br>
-					<strong>xiangtao Wang</strong>, Ruizhi Wang, Biao Tian, Jiaojiao Zhang, Shuo Zhang, Junyang Chen, Thomas Lukasiewicz, and Zhenghua Xu.<br>
+					<strong>xiangtao Wang</strong>, Ruizhi Wang, Biao Tian, Jiaojiao Zhang, Shuo Zhang, Junyang Chen, Thomas Lukasiewicz, and Zhenghua Xu*.<br>
 				<em>ICASSP, 2023</em> <br>
 			[<a href="https://ieeexplore.ieee.org/document/10094657">Paper</a>]&nbsp;
 			<!-- [<a href="files/SlotFormer.pptx">Slide</a>]&nbsp; -->
@@ -120,7 +120,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/AMLP.png" width="280" alt="AMLP" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>AMLP: Adaptive Masking Lesion Patches for Self-supervised Medical Image Segmentation</b><br>
-					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Jie Zhou, Thomas Lukasiewicz, and Zhenghua Xu.<br>
+					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Jie Zhou, Thomas Lukasiewicz, and Zhenghua Xu*.<br>
 					<em>Submitted to MIA</em> <br>
 			[<a href="https://arxiv.org/abs/2309.04312">Paper</a>]&nbsp;
 			</p></td></tr>
@@ -131,7 +131,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/C2M-DoT.png" width="280" alt="C2M-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>C<sup>2</sup>M-DoT: Cross-modal consistent multi-view medical report generation with domain transfer network</b><br>
-					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, and Zhenghua Xu.<br>
+					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Jie Zhou, Thomas Lukasiewicz, and Zhenghua Xu*.<br>
 					<em>Submitted to MIA</em> <br>
 			[<a href="files/C2M_DOT_MEDIMA.pdf">Paper</a>]&nbsp;
 			</p></td></tr>
@@ -142,7 +142,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/SW_Seg.png" width="280" alt="SW-Seg" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>SW-Seg: Semi- and Weakly-Supervised Learning for Accurate Medical Image Segmentation Using Inaccurate Scribble Annotations</b><br>
-					Biao Tian, Zhenghua Xu, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz.<br>
+					Biao Tian, Zhenghua Xu*, <strong>Xiangtao Wang</strong>, Shuo Zhang, Hening Wang, Yuefu Zhan, and Thomas Lukasiewicz.<br>
 					<em>Under review of TCSVT</em> <br>
 			[<a href="files/SW_Seg.pdf">Paper</a>]&nbsp;
 			</p></td></tr>
@@ -153,7 +153,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/CoAG-MuSFu.png" width="280" alt="CoAG-MuSFu" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
-					Zhenghua Xu, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, and Victor C. M. Leung.<br>
+					Zhenghua Xu*, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, and Victor C. M. Leung.<br>
 					<em>Minor revision of TNSE</em> <br>
 			[<a href="files/CoAG-MuSFu.pdf">Paper</a>]&nbsp;
 			</p></td></tr>
