--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sep, 2023] Two papers are submitted to <b>MIA</b>!</li> -->
 			<li>[Sep, 2023] Two papers are submitted to <b>MIA</b>!</li>
 			<li>[Sep, 2023] One paper is Minor revision to <b>TNSE</b>!</li>
+			<li>[Jul, 2023] One paper is submitted to <b>TCSVT</b>!</li>
 			<li>[Feb, 2023] Two papers accepted by <b>ICASSP 2023</b>!</li>
 		</ul>
 		</font>
