--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<ul>
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> <strong>Seminar</strong>: I co-organize the <a href="https://robotics.cs.toronto.edu/toronto-air/">Toronto AI in Robotics (AIR) Seminar</a>. Check it out if you are interested!</li> -->
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sep, 2023] Two papers are submitted to <b>MIA</b>!</li> -->
-			<li>[Sep, 2023] Two papers are submitted to <b>MedIA</b>!</li>
+			<li>[Sep, 2023] Two papers are submitted to <b>TMI</b>!</li>
 			<li>[Sep, 2023] One paper is Minor revision to <b>TNSE</b>!</li>
 			<li>[Jul, 2023] One paper is submitted to <b>TCSVT</b>!</li>
 			<li>[Feb, 2023] Two papers accepted by <b>ICASSP 2023</b>!</li>
