--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 					<!-- Prior to my ostgraduate, I received my Bachelor's degree from the Electrical Engineering, North China University of Science and Technology, where I worked with Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>. -->
 					<!-- I spent an unforgettable summer in 2020 doing internship at Stanford University, advised by Prof. <a href="https://geometry.stanford.edu/member/guibas/index.html">Leonidas J. Guibas</a>. -->
 					<!-- <br><br> -->
-					My research interests are in computer vision (CV) and natural language processing (NLP), particularly self-supervised learning, Robotics, LLM, and AIGC.
+					My research interests are in computer vision (CV) and natural language processing (NLP).
+					<!-- , particularly self-supervised learning, Robotics, LLM, and AIGC. -->
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
 				</td>
 			</tr>
@@ -110,7 +111,7 @@
 			<td width="30%" valign="middle"><p><img src="./imgs/MvCo-DoT.png" width="280" alt="MvCo-DoT" style="border-style: none" align="top"></p></td>
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>MvCo-DoT: Multi-View Contrastive Domain Transfer Network for Medical Report Generation</b><br>
-					<strong>Ruizhi Wang<strong>, Xiangtao Wang, Zhenghua Xu*, Wenting Xu, Junyang Chen, Thomas Lukasiewicz.<br>
+					<strong>Ruizhi Wang</strong>, Xiangtao Wang, Zhenghua Xu*, Wenting Xu, Junyang Chen, Thomas Lukasiewicz.<br>
 					<em>ICASSP, 2023</em> <br>
 			[<a href="https://ieeexplore.ieee.org/document/10095254">Paper</a>]&nbsp;
 			</p></td></tr>
@@ -133,7 +134,7 @@
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>C<sup>2</sup>M-DoT: Cross-modal Consistent Multi-view Medical Report Generation with Domain Transfer Network</b><br>
 					Ruizhi Wang, <strong>Xiangtao Wang</strong>, Thomas Lukasiewicz, Zhenghua Xu*.<br>
-					<em>Submitted to MIA</em> <br>
+					<em>Submitted to TMI</em> <br>
 			[<a href="files/C2M_DOT_MEDIMA.pdf">Paper</a>]&nbsp;
 			</p></td></tr>
 		</tbody>
@@ -165,9 +166,11 @@
 		Selected Awards</font></b></p>
 		<font face="Arial" style="font-size: 12pt; line-height: 2;">
 			<ul>
+				<li>Graduate Academic Scholarship of Class 2 (top 15%), 2023.</li>
+				<li>Bronze Prize, the 8th National Undergraduate Biomedical Engineering Innovation Design Competition, 2023.</li>
 				<li>1st place in Graduate Academic Scholarship of the major (top 10%), 2022.</li>
 				<li>Merit Student (top 10%), 2022.</li>
-				<li>Bronze Prize of the 7th National Undergraduate Biomedical Engineering Innovation Design Competition, 2022.</li>
+				<li>Bronze Prize, the 7th National Undergraduate Biomedical Engineering Innovation Design Competition, 2022.</li>
 				<li>Silver Prize of the 12th National Undergraduate Mathematics Contest (non-mathematics), 2020.</strong></li>
 				<li>Bronze Prize of the 8th APMCM Asia-Pacific University Mathematical Contest in Modeling, 2018.</li>
 			</ul>
