--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 		<ul>
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> <strong>Seminar</strong>: I co-organize the <a href="https://robotics.cs.toronto.edu/toronto-air/">Toronto AI in Robotics (AIR) Seminar</a>. Check it out if you are interested!</li> -->
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sept, 2023] Two papers are submitted to <b>MIA</b>!</li> -->
+			<li>[Nov., 2023] One paper is accepted to <b>TNSE</b>!</li>
 			<li>[Sept., 2023] Two papers are submitted to <b>TMI</b>!</li>
-			<li>[Sept., 2023] One paper is Minor revision to <b>TNSE</b>!</li>
 			<li>[Jul., 2023] One paper is submitted to <b>TCSVT</b>!</li>
 			<li>[Feb., 2023] Two papers accepted by <b>ICASSP 2023</b>!</li>
 		</ul>
@@ -156,7 +156,7 @@
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>Collaborative Attention Guided Multi-Scale Feature Fusion Network for Medical Image Segmentation</b><br>
 					Zhenghua Xu*, Biao Tian, Shijie Liu, <strong>Xiangtao Wang</strong>, Di Yuan, Junhua Gu, Junyang Chen, Thomas Lukasiewicz, Victor C. M. Leung.<br>
-					<em>Minor revision of TNSE</em> <br>
+					<em>Accepted by TNSE, 2023</em> <br>
 			[<a href="files/CoAG-MuSFu.pdf">Paper</a>]&nbsp;
 			</p></td></tr>
 		</tbody>
@@ -203,6 +203,6 @@
 	<br>
 
 	<hr>
-	<font style="font-size:10">Xiangtao Wang<i>Last updated: October.31, 2023</i></font>
+	<font style="font-size:10">Xiangtao Wang<i>Last updated: November.14, 2023</i></font>
 
 </div></body>
