--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			<td width="70%" valign="middle"><p style="margin-top: 3px; margin-bottom: 3px; line-height: 1.25;">
 				<b>AMLP: Adaptive Masking Lesion Patches for Self-supervised Medical Image Segmentation</b><br>
 					<strong>Xiangtao Wang</strong>, Ruizhi Wang, Thomas Lukasiewicz, Zhenghua Xu*.<br>
-					<em>Under review of TMI</em> <br>
+					<em>Major revision of TMI</em> <br>
 			[<a href="https://arxiv.org/abs/2309.04312">Paper</a>]&nbsp;
 			</p></td></tr>
 		</tbody>
