--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		<ul>
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> <strong>Seminar</strong>: I co-organize the <a href="https://robotics.cs.toronto.edu/toronto-air/">Toronto AI in Robotics (AIR) Seminar</a>. Check it out if you are interested!</li> -->
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sept, 2023] Two papers are submitted to <b>MIA</b>!</li> -->
+			<li>[Dec., 2023] One paper is Major revision of <b>TMI</b>!</li>
 			<li>[Nov., 2023] One paper is accepted to <b>TNSE</b>!</li>
 			<li>[Sept., 2023] Two papers are submitted to <b>TMI</b>!</li>
 			<li>[Jul., 2023] One paper is submitted to <b>TCSVT</b>!</li>
