--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<!-- Prior to my ostgraduate, I received my Bachelor's degree from the Electrical Engineering, North China University of Science and Technology, where I worked with Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/">Jiwen Lu</a>. -->
 					<!-- I spent an unforgettable summer in 2020 doing internship at Stanford University, advised by Prof. <a href="https://geometry.stanford.edu/member/guibas/index.html">Leonidas J. Guibas</a>. -->
 					<!-- <br><br> -->
-					My research interests are in computer vision (CV) and natural language processing (NLP).
+					My research interests are neuroscience and computational linguistics. 
 					<!-- , particularly self-supervised learning, Robotics, LLM, and AIGC. -->
 				</font></p><font face="Arial" style="font-size: 12pt;"></font>
 				</td>
@@ -83,10 +83,10 @@
 		<ul>
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> <strong>Seminar</strong>: I co-organize the <a href="https://robotics.cs.toronto.edu/toronto-air/">Toronto AI in Robotics (AIR) Seminar</a>. Check it out if you are interested!</li> -->
 			<!-- <li><b style="color: green; background-color: #ffff42">NEW</b> [Sept, 2023] Two papers are submitted to <b>MIA</b>!</li> -->
-			<li>[Dec., 2023] One paper is Major revision of <b>TMI</b>!</li>
+			<!-- <li>[Dec., 2023] One paper is Major revision of <b>TMI</b>!</li> -->
 			<li>[Nov., 2023] One paper is accepted to <b>TNSE</b>!</li>
-			<li>[Sept., 2023] Two papers are submitted to <b>TMI</b>!</li>
-			<li>[Jul., 2023] One paper is submitted to <b>TCSVT</b>!</li>
+			<!-- <li>[Sept., 2023] Two papers are submitted to <b>TMI</b>!</li> -->
+			<!-- <li>[Jul., 2023] One paper is submitted to <b>TCSVT</b>!</li> -->
 			<li>[Feb., 2023] Two papers accepted by <b>ICASSP 2023</b>!</li>
 		</ul>
 		</font>
@@ -204,6 +204,6 @@
 	<br>
 
 	<hr>
-	<font style="font-size:10">Xiangtao Wang<i>Last updated: November.15, 2023</i></font>
+	<font style="font-size:10">Xiangtao Wang<i>Last updated: March.23, 2024</i></font>
 
 </div></body>
